2006-12-04  Ben Elliston  <bje@au.ibm.com>

	* config/spu/spu.md (_mulv4si3): Remove unused local variables.

2006-12-03  Eric Christopher  <echristo@apple.com>

	PR target/24598
	* config/t-slibgcc-darwin: Pass -install_name.
	* config/darwin.h (LINK_COMMAND_SPEC): Remove use of
	libtool. Only pass through options that the linker recognizes.
	(LINK_SPEC): Update comment. Translate options.
	(STARTFILE_SPEC): Add dylib1.o for shared libraries.
	* config/darwin9.h (LINK_COMMAND_SPEC): Ditto above.

2006-12-03  Dorit Nuzman  <dorit@il.ibm.com>

	* config/spu/spu.md (smaxv4sf3, sminv4sf3): New.

2006-12-03  Uros Bizjak  <ubizjak@gmail.com>

	PR target/30041
	* config/i386/sse.md ("*sse3_movddup"): Use operands[0] and
	operands[1] in insn constraint.  Correct type attribute to sselog1.

2006-12-02  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/30040
	* config/i386/driver-i386.c: Include "coretypes.h" and "tm.h".
	(bit_SSSE3): New.
	(host_detect_local_cpu): Check -mtune= vs. -march=. Rewrite
	processor detection.

	* config/i386/i386.h (CC1_CPU_SPEC): Add -mtune=native for
	-march=native if there is no -mtune=*.

	* config/i386/x-i386 (driver-i386.o): Also depend on $(TM_H)
	coretypes.h.

2006-12-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* doc/install.texi: Update recommended MPFR version.  Remove
	obsolete reference to cumulative patch.

2006-12-02  Lee Millward  <lee.millward@codesourcery.com>

	PR c/27953
	* c-decl.c (store_parm_decls_oldstyle): Robustify.

2006-11-30  Jan Hubicka  <jh@suse.cz>
	    Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (pentium4_cost, nocona_cost): Update
	32bit memcpy/memset decriptors.
	(decide_alg): With -minline-all-stringops and sizes that are best
	to be copied via libcall still work hard enough to pick non-libcall
	strategy.

2006-12-02  Kazu Hirata  <kazu@codesourcery.com>

	* doc/extend.texi, doc/invoke.texi, doc/md.texi: Fix typos.

	* builtins.c, cfgloop.h, cgraph.h, config/arm/arm.c,