@@ -1,0 +1,6 @@
+package pointer_variable_bounds_q is
+
+  type A_SIZE_TYPE is new INTEGER range 0 .. 65536;
+  function A_MAX_COMPS return A_SIZE_TYPE;
+
+end pointer_variable_bounds_q;
