@@ -1,3 +1,8 @@
+2006-12-04  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* pt.c (for_each_template_parm_r) <INTEGER_TYPE>: New case.
+	Call for_each_template_parm on TYPE_MIN_VALUE and TYPE_MAX_VALUE.
+
 2006-12-03  Richard Henderson  <rth@redhat.com>
             Andrew Pinski  <pinskia@gmail.com>
 
